--- a/lommeregner.html
+++ b/lommeregner.html
@@ -14,6 +14,16 @@
     </ul>
 </nav>
 <body>
-   
+    <form>
+        Value 1: <input type="text">
+        Value 2: <input type="text">
+        <select>
+            <option value="Plus">Add</option>
+            <option value="Minus">Add</option>
+            <option value="Dividere">Add</option>
+            <option value="Gange">Add</option>
+        </select>
+        <button type="Knap" name="Knap">Udregn</button>
+       </form>
 </body>
 </html>
