--- a/lommeregner.html
+++ b/lommeregner.html
@@ -15,9 +15,9 @@
 </nav>
 <body>
     <form>
-        Value 1: <input type="text">
-        Value 2: <input type="text">
-        <select>
+        Value 1: <input type="text" id="value 1">
+        Value 2: <input type="text" id="value 2">
+        <select id="operator">
             <option value="Plus">Add</option>
             <option value="Minus">Add</option>
             <option value="Dividere">Add</option>
